deployment/kubernetes-manifests/k8s-with-jaeger/ts-deployment-part3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ui-dashboard
spec:
  selector:
    matchLabels:
      app: ts-ui-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      containers:
      - name: ts-ui-dashboard
        image: docker.peidan.me/lizytalk/ts-ui-dashboard:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 500m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 2000Mi

---

apiVersion: v1
kind: Service
metadata:
  name: ts-ui-dashboard
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 32677
  selector:
   app: ts-ui-dashboard
---
